# midlc-rs

./: .gitignore  Cargo.toml  README.md  README.typ  task2.typ
results/: all_type_out.txt  module_nest_out.txt  module_struct_out.txt  no_module_out.txt  struct_nest_out.txt
src/: analyze.rs  cli.rs  codegen.rs  main.rs
src/parser/: ast.rs  grammar.pest  mod.rs
testcases/: all_type.idl  module_nest.idl  module_struct.idl  no_module.idl  struct_nest.idl  task2-1.idl  task2-3.idl  task2-4.idl  task2-6.idl
